@@ -1,3 +1,10 @@
+2006-12-18  Viktor Mihajlovski  <mihajlov@localhost.localdomain>
+
+	* array.c, cimXmlGen.c, cimXmlRequest.c, objectImpl.c, objectpath.c: 
+
+	Fixed 1618216: corrected handling of references in arrays, null
+	argument handling and formatting of resultvalues.
+	
 2006-12-14  Sven Schuetz
 	* cimslpCMPI.c, cimslp.h, trace.h, trace.c, cimslp.c, Makefile.am, 
 	cimslpCMPI.h, cimslpUtil.h, cimslpSLP.h, cimslpSLP.c:
